# cftc-cot

./: CHANGELOG.md  LICENSE  REPORT_SPECS.md  REPORT_SPECS.md.md  Readme.md  __init__.py  pyproject.toml  requirements.txt
src/cftc_cot/: cftc_cot.py
tests/: test_cftc_cot.py
